Updated log evaluation